// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Components/Titre/Territoires All 1`] = `
<div
  class="tablet-blobs mb-xl"
>
  <div
    class="tablet-blob-1-4"
  >
    <div>
      <h5>
        Surface
      </h5>
      <p>
        4 km² environ
      </p>
    </div>
  </div>
  <div
    class="tablet-blob-3-4"
  >
    <h5>
      Territoires
    </h5>
    
    <div>
      
      <div>
        <h6
          class="mb-s"
        >
          Pays de la Loire / Sarthe
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Flée
                
              </span>
            </span>
          </li>
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Montval-sur-loir
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
      
    </div>
    <div>
      
      <div>
        <h6
          class="mb-s"
        >
          Centre-Val de Loire / Indre-et-Loire
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Tours
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
      
    </div>
    <div>
      
      <div>
        <h6
          class="mb-s"
        >
          Guyane
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Ville de Guyane
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
      
    </div>
    
    <div>
      <div>
        <h6
          class="mb-s"
        >
          Forêts
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Forêt 1
                
              </span>
            </span>
          </li>
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Forêt 2
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
    </div>
    <div>
      <div>
        <h6
          class="mb-s"
        >
          Zones du SDOM
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Zone 1
                
              </span>
            </span>
          </li>
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Zone 3
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
    </div>
    
    <div>
      <h6
        class="mb-s"
      >
        facade 1
      </h6>
      <ul
        class="list-inline"
      >
        
        <li
          class="mr-xs mb-xs"
        >
          <span
            class="bold cap-first small lh-2"
          >
            <span
              class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
            >
              
              nom1
              
            </span>
          </span>
        </li>
        <li
          class="mr-xs mb-xs"
        >
          <span
            class="bold cap-first small lh-2"
          >
            <span
              class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
            >
              
              nom3
              
            </span>
          </span>
        </li>
        
      </ul>
    </div>
    <div>
      <h6
        class="mb-s"
      >
        facade 2
      </h6>
      <ul
        class="list-inline"
      >
        
        <li
          class="mr-xs mb-xs"
        >
          <span
            class="bold cap-first small lh-2"
          >
            <span
              class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
            >
              
              nom2
              
            </span>
          </span>
        </li>
        
      </ul>
    </div>
    
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Components/Titre/Territoires Empty 1`] = `
<div
  class="tablet-blobs mb-xl"
>
  <div
    class="tablet-blob-1-4"
  >
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots Components/Titre/Territoires Only Forets 1`] = `
<div
  class="tablet-blobs mb-xl"
>
  <div
    class="tablet-blob-1-4"
  >
    <!--v-if-->
  </div>
  <div
    class="tablet-blob-3-4"
  >
    <h5>
      Territoires
    </h5>
    <!--v-if-->
    <div>
      <div>
        <h6
          class="mb-s"
        >
          Forêts
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Forêt 1
                
              </span>
            </span>
          </li>
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Forêt 2
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Components/Titre/Territoires Only Sdom Zones 1`] = `
<div
  class="tablet-blobs mb-xl"
>
  <div
    class="tablet-blob-1-4"
  >
    <!--v-if-->
  </div>
  <div
    class="tablet-blob-3-4"
  >
    <h5>
      Territoires
    </h5>
    <!--v-if-->
    <!--v-if-->
    <div>
      <div>
        <h6
          class="mb-s"
        >
          Zones du SDOM
        </h6>
        <ul
          class="list-inline"
        >
          
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Zone 1
                
              </span>
            </span>
          </li>
          <li
            class="mr-xs mb-xs"
          >
            <span
              class="bold cap-first small lh-2"
            >
              <span
                class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
              >
                
                Zone 3
                
              </span>
            </span>
          </li>
          
        </ul>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Components/Titre/Territoires Only Secteurs Maritimes 1`] = `
<div
  class="tablet-blobs mb-xl"
>
  <div
    class="tablet-blob-1-4"
  >
    <!--v-if-->
  </div>
  <div
    class="tablet-blob-3-4"
  >
    <h5>
      Territoires
    </h5>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    
    <div>
      <h6
        class="mb-s"
      >
        facade 1
      </h6>
      <ul
        class="list-inline"
      >
        
        <li
          class="mr-xs mb-xs"
        >
          <span
            class="bold cap-first small lh-2"
          >
            <span
              class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
            >
              
              nom1
              
            </span>
          </span>
        </li>
        <li
          class="mr-xs mb-xs"
        >
          <span
            class="bold cap-first small lh-2"
          >
            <span
              class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
            >
              
              nom3
              
            </span>
          </span>
        </li>
        
      </ul>
    </div>
    <div>
      <h6
        class="mb-s"
      >
        facade 2
      </h6>
      <ul
        class="list-inline"
      >
        
        <li
          class="mr-xs mb-xs"
        >
          <span
            class="bold cap-first small lh-2"
          >
            <span
              class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
            >
              
              nom2
              
            </span>
          </span>
        </li>
        
      </ul>
    </div>
    
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Components/Titre/Territoires Only Surface 1`] = `
<div
  class="tablet-blobs mb-xl"
>
  <div
    class="tablet-blob-1-4"
  >
    <div>
      <h5>
        Surface
      </h5>
      <p>
        4 km² environ
      </p>
    </div>
  </div>
  <!--v-if-->
</div>
`;
